--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port = 8880
+spring.data.mongodb.uri = mongodb+srv://icharoenphol2001:Pol0658481130!@hypertentionpatientsmon.d5wyhk9.mongodb.net/HypertentionPatients?retryWrites = true&w = majority
 
+# App Properties
+hpm.app.jwtSecret= 🩸ProjectSpringBootHypertentionPatientsManagement
+hpm.app.jwtExpirationMs= 86400000
