--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,7 @@
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>9.11</version> <!-- Latest version as of now -->
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+			<version>9.38-rc3</version> <!-- Latest version as of now -->
 		</dependency>
 
 
