--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,10 @@
 			<version>9.38-rc3</version> <!-- Latest version as of now -->
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 
 	</dependencies>
 
