--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
 			<artifactId>jython-standalone</artifactId>
 			<version>2.7.2</version>
 		</dependency>
+		<!-- Auto save time -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.12.7</version>
+		  </dependency>
 
 	</dependencies>
 
