--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port = 8880
 spring.data.mongodb.uri=mongodb+srv://icharoenphol2001:Pol0658481130!@hypertentionpatientsmon.d5wyhk9.mongodb.net/HypertentionPatients?retryWrites=true&w=majority
 spring.profiles.active=prod
+spring.thymeleaf.check-template-location=false
+spring.thymeleaf.prefix=classpath:/custom-templates/
 
 # App Properties
 hpm.app.jwtSecret= ProjectSpringBootHypertentionPatientsManagement
